--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@socket.io/redis-adapter": "^8.3.0",
     "@socket.io/redis-emitter": "^5.1.0",
     "axios": "^1.6.8",
-    "bull": "^4.12.3",
+    "bull": "^4.12.5",
     "cache-manager": "^5.5.2",
     "cache-manager-ioredis-yet": "^2.0.4",
     "class-transformer": "^0.5.1",
@@ -90,13 +90,14 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "qiniu": "^7.12.0",
+    "qs": "^6.12.1",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^5.0.7",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
     "stacktrace-js": "^2.0.2",
     "svg-captcha": "^1.4.0",
-    "systeminformation": "^5.22.8",
+    "systeminformation": "^5.22.9",
     "ts-node": "^10.9.2",
     "typeorm": "0.3.17",
     "ua-parser-js": "^1.0.37",
@@ -104,21 +105,22 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.17.0",
+    "@antfu/eslint-config": "^2.18.1",
     "@compodoc/compodoc": "^1.1.24",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.8",
     "@types/cache-manager": "^4.0.6",
     "@types/jest": "29.5.12",
-    "@types/lodash": "^4.17.1",
+    "@types/lodash": "^4.17.4",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.12.12",
     "@types/passport-jwt": "^4.0.1",
+    "@types/qs": "^6.9.15",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
     "cross-env": "^7.0.3",
-    "eslint": "^9.2.0",
+    "eslint": "^9.3.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.11.1",
