--- a/package.json
+++ b/package.json
@@ -82,8 +82,9 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
-    "mysql2": "^3.9.9",
+    "mysql2": "^3.10.0",
     "nanoid": "^3.3.7",
+    "nestjs-cls": "^4.3.0",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -97,7 +98,7 @@
     "socket.io": "^4.7.5",
     "stacktrace-js": "^2.0.2",
     "svg-captcha": "^1.4.0",
-    "systeminformation": "^5.22.9",
+    "systeminformation": "^5.22.10",
     "ts-node": "^10.9.2",
     "typeorm": "0.3.17",
     "ua-parser-js": "^1.0.38",
@@ -105,7 +106,7 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.19.1",
+    "@antfu/eslint-config": "^2.19.2",
     "@compodoc/compodoc": "^1.1.25",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
@@ -114,13 +115,13 @@
     "@types/jest": "29.5.12",
     "@types/lodash": "^4.17.4",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.13.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/qs": "^6.9.15",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
     "cross-env": "^7.0.3",
-    "eslint": "^9.3.0",
+    "eslint": "^9.4.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.5",
     "simple-git-hooks": "^2.11.1",
