--- a/package.json
+++ b/package.json
@@ -47,31 +47,31 @@
     "@fastify/cookie": "^9.4.0",
     "@fastify/multipart": "^8.3.0",
     "@fastify/static": "^7.0.4",
-    "@liaoliaots/nestjs-redis": "^9.0.5",
+    "@liaoliaots/nestjs-redis": "^10.0.0",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^3.0.3",
     "@nestjs/bull": "^10.2.1",
     "@nestjs/cache-manager": "^2.2.2",
-    "@nestjs/common": "^10.4.1",
+    "@nestjs/common": "^10.4.4",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.4.1",
+    "@nestjs/core": "^10.4.4",
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-fastify": "^10.4.1",
-    "@nestjs/platform-socket.io": "^10.4.1",
-    "@nestjs/schedule": "^4.1.0",
-    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/platform-fastify": "^10.4.4",
+    "@nestjs/platform-socket.io": "^10.4.4",
+    "@nestjs/schedule": "^4.1.1",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.4.1",
+    "@nestjs/websockets": "^10.4.4",
     "@socket.io/redis-adapter": "^8.3.0",
     "@socket.io/redis-emitter": "^5.1.0",
     "axios": "^1.7.7",
-    "bull": "^4.16.2",
+    "bull": "^4.16.3",
     "cache-manager": "^5.7.6",
-    "cache-manager-ioredis-yet": "^2.1.1",
+    "cache-manager-ioredis-yet": "^2.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cron": "^3.1.7",
@@ -83,7 +83,7 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
-    "mysql2": "^3.11.0",
+    "mysql2": "^3.11.3",
     "nanoid": "^3.3.7",
     "nestjs-cls": "^4.4.1",
     "nodemailer": "^6.9.15",
@@ -91,37 +91,37 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "qiniu": "^7.12.0",
+    "qiniu": "^7.13.0",
     "qs": "^6.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.8.0",
     "stacktrace-js": "^2.0.2",
     "svg-captcha": "^1.4.0",
     "systeminformation": "^5.23.5",
     "ts-node": "^10.9.2",
     "typeorm": "0.3.17",
-    "ua-parser-js": "^1.0.38",
+    "ua-parser-js": "^1.0.39",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.3.2",
+    "@antfu/eslint-config": "^3.7.3",
     "@compodoc/compodoc": "^1.1.25",
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.1.4",
-    "@nestjs/testing": "^10.4.1",
+    "@nestjs/testing": "^10.4.4",
     "@types/cache-manager": "^4.0.6",
     "@types/jest": "29.5.12",
-    "@types/lodash": "^4.17.7",
+    "@types/lodash": "^4.17.10",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.14.11",
     "@types/passport-jwt": "^4.0.1",
-    "@types/qs": "^6.9.15",
+    "@types/qs": "^6.9.16",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
     "cross-env": "^7.0.3",
-    "eslint": "^9.9.1",
+    "eslint": "^9.11.1",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "rimraf": "^6.0.1",
@@ -131,15 +131,12 @@
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
+    "tsx": "^4.19.1",
+    "typescript": "~5.5.4"
   },
   "pnpm": {
     "peerDependencyRules": {
-      "allowedVersions": {
-        "@liaoliaots/nestjs-redis>@nestjs/common": "^10.0.0",
-        "@liaoliaots/nestjs-redis>@nestjs/core": "^10.0.0",
-        "eslint": "^9.2.0"
-      }
+      "allowedVersions": {}
     }
   },
   "jest": {
