--- a/.env.production
+++ b/.env.production
@@ -11,6 +11,7 @@ REFRESH_TOKEN_EXPIRE = 2592000
 SWAGGER_ENABLE = true
 SWAGGER_PATH = api-docs
 SWAGGER_VERSION = 1.0
+SWAGGER_SERVER_URL = https://nest-admin.buqiyuan.top
 
 # db
 DB_HOST = host.docker.internal
